2010-05-01 Francois Suter  <francois@typo3.org>

	* Follow-up to #14195: removed file typo3/sysext/t3skin/stylesheets/.htaccess which has become useless

2010-05-01  Steffen Kamper  <info@sk-typo3.de>

	* deleted testcase for comparing ereg_ usage as it doesn't work with php >= 5.3
	* Fixed bug #8305: SQL debug output is not shown in the Backend (thanks to Stefan Galinski)

2010-05-01  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #236: Rendered pages do not validate if no doctype is set. (thanks to Christian Buelter)
	* Fixed bug #14231: csc static template "v4.3" won't include the registered plugins

2010-04-30  Benjamin Mack  <benni@typo3.org>

	* Added feature #12502: Use HMACs for authencity and integrity checks (Thanks to Marcus Krause and the TYPO3 Security Team)

2010-04-30 Francois Suter  <francois@typo3.org>

	* Added feature #14195: Reorganize the backend stylesheets (thanks to Fabien Udriot and Steffen Gebert)

2010-04-30  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #11587: set proper default timezone (fixes PHP 5.3 warnings concerning missing timezone settings)
	* Fixed bug #3800: Improve warning about empty reference index table (thanks to Michael Knabe)

2010-04-30  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #13758: page.jsInline / page.jsFooterInline may fail with config.removeDefaultJS=external (thanks to Steffen Ritter)

2010-04-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated NEWS.txt as follow-up to #14260 and raise of DBAL version
	* Raised DBAL version from 1.1.2 to 1.1.3
	* Added feature #14260: Allow DBAL to be configured [Install Tool]
	* Fixed bug #14055: Install Tool wants to remove static_template table (thanks to Gregor Hermens)
	* Fixed bug #14254: Fresh install does not redirect to Install Tool when mysql is not available

2010-04-30  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to bug #13194: Additional unit tests and test renamings for class tx_scheduler_CronCmd